# tmgr

./: .appveyor.yml  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  TOOLCHAIN.md  bootstrap.bat
cmake/: readme.txt
demos/C_wxLCtrlExtended/: C_wxLCtrlExtended.cpp  C_wxLCtrlExtended.h  SortingListCtrl.cbp  SortingListCtrlApp.cpp  SortingListCtrlApp.h  SortingListCtrlMain.cpp  SortingListCtrlMain.h
demos/C_wxLCtrlExtended/wxsmith/: SortingListCtrlframe.wxs
demos/C_wxScrolledImageComponent/: ScrolledImageComponent.cbp  ScrolledImageComponentApp.cpp  ScrolledImageComponentApp.h  ScrolledImageComponentMain.cpp  ScrolledImageComponentMain.h
demos/C_wxScrolledImageComponent/wxsmith/: ScrolledImageComponentframe.wxs
demos/C_wxScrolledWindowCat/: ButtonArray.cbp  ButtonArrayApp.cpp  ButtonArrayApp.h  ButtonArrayMain.cpp  ButtonArrayMain.h
demos/C_wxScrolledWindowCat/wxsmith/: ButtonArrayframe.wxs
doc/: CMakeLists.txt
inc/: C_DbHandle.h  C_OsmDownloader.h  C_Report.h  C_ReportAssignementDuration.h  C_ReportAssignements.h  C_ReportMapCreator.h  C_ReportMapCreatorAll.h  C_ReportMapInlet.h  C_ReportNoVisits.h  C_ReportNotAssigned.h  C_ReportOverview.h  C_Settings.h  C_wxDataListPanel_NoVisits.h  C_wxDataListPanel_Tips.h  C_wxDecorator.h  C_wxDlgInfo.h  C_wxImagePanel.h  C_wxLCtrlExtended.h  C_wxPanelActions.h  C_wxPanelProperties.h  C_wxPanelTerritoryProperties.h  C_wxPopupMenu.h  C_wxScrolledImageComponent.h  C_wxScrolledWindowCat.h  C_wxTmgrMainFrame.h  C_wxTmgrMainFrameManager.h  TerritoryMgrApp.h  appl_data.h  helpers.h  logger.h  safe_wx_str.h  svn_version.tmpl  version.h.in  wxIconBundleResLoader.h
nsis/: CMakeLists.txt  NSIS.template.in
report/: report_tmpl.tex  report_tmpl2.tex  report_tmpl3.tex
res/: RunEdge.bat  resource.rc  svn.rc
src/: C_DbHandle.cpp  C_OsmDownloader.cpp  C_Report.cpp  C_ReportAssignementDuration.cpp  C_ReportAssignements.cpp  C_ReportMapCreator.cpp  C_ReportMapCreatorAll.cpp  C_ReportMapInlet.cpp  C_ReportNoVisits.cpp  C_ReportNotAssigned.cpp  C_ReportOverview.cpp  C_Settings.cpp  C_wxDataListPanel_NoVisits.cpp  C_wxDataListPanel_Tips.cpp  C_wxDecorator.cpp  C_wxDlgInfo.cpp  C_wxImagePanel.cpp  C_wxLCtrlExtended.cpp  C_wxPanelActions.cpp  C_wxPanelProperties.cpp  C_wxPanelTerritoryProperties.cpp  C_wxPopupMenu.cpp  C_wxScrolledImageComponent.cpp  C_wxScrolledWindowCat.cpp  C_wxTmgrMainFrame.cpp  C_wxTmgrMainFrameManager.cpp  TerritoryMgrApp.cpp  helpers.cpp  logger.cpp  safe_wx_str.cpp  wxIconBundleResLoader.cpp
test/: CMakeLists.txt  test_boost_process.cpp
tools/: __environment.bat  _clear.bat  _setenv.bat  build_boost.bat  build_wxwidgets.bat
wxfb/: C_wxActions.cpp  C_wxActions.h  C_wxInfoDialog.cpp  C_wxInfoDialog.h  C_wxListPanel.cpp  C_wxListPanel.h  C_wxProperties.cpp  C_wxProperties.h  C_wxTerritoryProperties.cpp  C_wxTerritoryProperties.h  C_wxTmgr.cpp  C_wxTmgr.h  wxfb_action_panel.fbp  wxfb_info_dialog.fbp  wxfb_list_panel.fbp  wxfb_property_panel.fbp  wxfb_territory_property_panel.fbp  wxfb_tmgr.fbp
